# cognee-community

./: pyproject.toml
.github/actions/community_setup/: action.yml
.github/workflows/: community_task_tests.yml  graph_db_community_tests.yml  test_turingdb.yml
experimental/dlt_demo/: README.md  backend.py  graph_visualization.html  requirements.txt
experimental/dlt_demo/frontend/: app.js
experimental/thought_graph_app/: .env.template  BRAINDUMP_WORKFLOW.md  README.md  app.py  dtos.py  inject_testdata.sh  pyproject.toml  requirements.txt
